--- a/about.html
+++ b/about.html
@@ -9,18 +9,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet" type="text/css" />
     <title>About Ty</title>
-    <link rel="icon" type="image/x-icon" href="images and videos/Vintage Badge Logo Design (3).png" sizes="32x32">
+    <link rel="icon" type="image/x-icon" href="Vintage Badge Logo Design (3).png" sizes="32x32">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
   
   <body>
       <nav>
-<!-- Simulate a smartphone / tablet -->
+<!-- Simulate a smartphone/tablet -->
 <div class="mobile-container">
 
 <!-- Top Navigation Menu -->
 <div class="topnav">
-<img class="logo" src="images and videos/Vintage Badge Logo Design (3).png">
+<img class="logo" src="Vintage Badge Logo Design (3).png">
   <div id="myLinks">
       <a href="hometwo.html" class="topnav-icons fa fa-home w3-left w3-bar-item w3-button ga-nav" title="Home"></a>
      <a href="about.html">About</a>
@@ -61,7 +61,7 @@ function myFunction() {
               <div class="container">
       <div class="text-center">
         <video width="320" height="220" controls>
-  <source src="images and videos/TyTech2.mp4" type="video/mp4" alt="video">
+  <source src="tytech2_Ifvdkk7W.mp4" type="video/mp4" alt="video">
 </video>
       </div>
      </div>   
