--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   
   <body>
       <div class="container">
-          <img class="fplogo" src="images and videos/Vintage Badge Logo Design (3).png">
+          <img class="fplogo" src="Vintage Badge Logo Design (3).png">
           <br>
           <h3>"The tech of your dreams"</h3>
       </div>
